// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Like component should render a Like 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={32}
      bbWidth={32}
      height={32}
      isLiked={false}
      itemId="abc"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          undefined,
          null,
          Object {
            "flex": 0,
            "height": 32,
            "width": 32,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={32}
    >
      <RNSVGGroup
        fill={
          Array [
            0,
            4278190080,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        font={Object {}}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
            "fillOpacity",
            "fillRule",
            "stroke",
            "strokeWidth",
            "strokeOpacity",
            "strokeDasharray",
            "strokeDashoffset",
            "strokeLinecap",
            "strokeLinejoin",
            "strokeMiterlimit",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        x={0}
        y={0}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4278190080,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              1,
              1,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={Array []}
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          x={0}
          y={0}
        >
          <RNSVGPath
            d="M8.4714891,7.91342724 C8.40092905,8.11332419 8.21198469,8.247 8,8.247 L0.851053859,8.247 L6.8190897,13.1940562 C6.97786142,13.3256661 7.03954135,13.5412541 6.97440478,13.7369244 L4.47542848,21.2438153 L10.7043126,16.6758016 C10.8803445,16.5467077 11.1197777,16.5467352 11.29578,16.6758695 L17.5255115,21.2466726 L15.0255952,13.7369244 C14.9604634,13.5412684 15.0221293,13.3256958 15.1808786,13.1940824 L21.1480385,8.247 L14,8.247 C13.7879698,8.247 13.5989953,8.1132677 13.5284697,7.91331038 L11.001055,0.747156006 L8.4714891,7.91342724 Z M7.64625613,7.247 L10.0615109,0.404572757 L10.065,0.395 C10.2116087,0.00515415562 10.584498,-0.253 11.001,-0.253 C11.417502,-0.253 11.7903913,0.00515415562 11.9405303,0.404689621 L14.3538369,7.247 L21.1479615,7.247 C21.5666611,7.24696779 21.9410514,7.50778432 22.0861083,7.90055376 C22.2311652,8.29332319 22.1161732,8.73487749 21.7921214,9.01191759 L16.082439,13.7456104 L18.4744885,20.9313274 C18.6117246,21.3443155 18.4661084,21.7986422 18.1143695,22.0549091 C17.7626306,22.3111761 17.285539,22.3105364 16.93422,22.0531305 L10.9999278,17.6990936 L5.05857152,22.0561847 C4.70739215,22.3082718 4.23398783,22.3061623 3.88506894,22.0509557 C3.53615005,21.795749 3.39072128,21.3452309 3.52559522,20.9310756 L5.91755236,13.7456364 L0.201038466,9.007 C-0.117173211,8.73487749 -0.232165187,8.29332319 -0.0871082927,7.90055376 C0.0579486014,7.50778432 0.432338893,7.24696779 0.851,7.247 L7.64625613,7.247 Z"
            fill={
              Array [
                0,
                4294485530,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              Array [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RCTSafeAreaView>
`;

exports[`the Like component should render a UnLike 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={32}
      bbWidth={32}
      height={32}
      isLiked={true}
      itemId="abc"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          undefined,
          null,
          Object {
            "flex": 0,
            "height": 32,
            "width": 32,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={32}
    >
      <RNSVGGroup
        fill={
          Array [
            0,
            4278190080,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        font={Object {}}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
            "fillOpacity",
            "fillRule",
            "stroke",
            "strokeWidth",
            "strokeOpacity",
            "strokeDasharray",
            "strokeDashoffset",
            "strokeLinecap",
            "strokeLinejoin",
            "strokeMiterlimit",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        x={0}
        y={0}
      >
        <RNSVGPath
          d="M8.64625613,8.247 L11.0615109,1.40457276 L11.065,1.395 C11.2116087,1.00515416 11.584498,0.747 12.001,0.747 C12.417502,0.747 12.7903913,1.00515416 12.9405303,1.40468962 L15.3538369,8.247 L22.1479615,8.247 C22.5666611,8.24696779 22.9410514,8.50778432 23.0861083,8.90055376 C23.2311652,9.29332319 23.1161732,9.73487749 22.7921214,10.0119176 L17.082439,14.7456104 L19.4744885,21.9313274 C19.6117246,22.3443155 19.4661084,22.7986422 19.1143695,23.0549091 C18.7626306,23.3111761 18.285539,23.3105364 17.93422,23.0531305 L11.9999278,18.6990936 L6.05857152,23.0561847 C5.70739215,23.3082718 5.23398783,23.3061623 4.88506894,23.0509557 C4.53615005,22.795749 4.39072128,22.3452309 4.52559522,21.9310756 L6.91755236,14.7456364 L1.20103847,10.007 C0.882826789,9.73487749 0.767834813,9.29332319 0.912891707,8.90055376 C1.0579486,8.50778432 1.43233889,8.24696779 1.851,8.247 L8.64625613,8.247 Z"
          fill={
            Array [
              0,
              4294485530,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RCTSafeAreaView>
`;
